--- a/client/src/app/components/Rh/components/ListUser/list.styles.scss
+++ b/client/src/app/components/Rh/components/ListUser/list.styles.scss
@@ -1,24 +1,33 @@
+@import "../../../../../scss/mixin.scss";
 .register-list {
   background: #f8f9fa;
   height: 100vh;
   width: 80%;
-  .register-heading-list {
-    text-align: center;
-    font-size: 3em;
-    color: #495057;
-  }
-  .search-list {
-    margin: 15px auto;
-    background-color: white;
-    input {
-      height: 50px;
-      width: 90%;
-      border: none;
-      margin-left: 5px;
-      font-size: 20px;
-      &:focus {
-        outline-style: none !important;
+  .list-header {
+    width: 95%;
+    margin: 20px auto 0 20px;
+    display: inline-flex;
+    justify-content: space-between;
+    .register-heading-list {
+      font-size: 35px;
+      color: #495057;
+      font-weight: bold;
+    }
+    .search-list {
+      background-color: white;
+      max-width: 20%;
+      input {
+        max-width: 100%;
+        border: none;
+        margin-left: 10px;
+        font-size: 20px;
+        &:focus {
+          outline-style: none !important;
+        }
       }
+    }
+    .logout {
+      @include btn-purple;
     }
   }
   .register-Table {
@@ -27,7 +36,6 @@
     text-align: center;
   }
   .table-body {
-    border: 1em solid black;
     height: 50vh;
     overflow: auto;
     display: block;
@@ -35,10 +43,8 @@
   .btnRegister {
     border: none;
     margin-right: 0px;
-
     width: 50%;
     height: 80px;
-    font-weight: bold;
     font-size: 2em;
     margin-top: 5%;
     background: #0062cc;
@@ -48,7 +54,7 @@
 
   .table-fixed {
     width: 90%;
-    margin: auto;
+    margin: 40px auto;
     thead {
       background: #295bc5;
       color: white;
@@ -62,7 +68,9 @@
         th {
           width: 100%;
           border: none;
+          font-size: 25px;
           text-align: center;
+          line-height: 35px;
         }
       }
     }
@@ -74,14 +82,14 @@
       tr {
         display: inline-flex;
         width: 100%;
-        height: 80px;
+        height: 50px;
         border: none;
         td {
           display: inline-flex;
           justify-content: space-around;
           width: 100%;
           p {
-            line-height: 45px;
+            line-height: 25px;
             font-size: 18px;
           }
           .contImg {
@@ -102,7 +110,6 @@
       tr:hover {
         cursor: pointer;
         color: white;
-        font-weight: bold;
         background-color: rgba(0, 0, 0, 0.2);
       }
     }
