--- a/client/src/app/components/User/user-style.scss
+++ b/client/src/app/components/User/user-style.scss
@@ -20,6 +20,7 @@
     height: 80vh;
     width: 85%;
     padding-left: 0;
+    font-weight: 700;
 
     .logoAmiltoneSeul {
       position: absolute;
@@ -113,7 +114,6 @@
         }
         .answer_title {
           font-size: 30px;
-          text-decoration: underline;
           padding-bottom: 20px;
           padding-left: 20px;
         }
